# project_weather_brazilian_capitals

./: .gitignore  README.md  pyproject.toml
src/: README.md  controller.py  db.py  main.py  models.py  schema.py
